--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 alt="loading"
               />
               <span
-                class="-ms-2 self-center text-2xl font-semibold whitespace-nowrap text-primary"
+                class="-ms-2 self-center text-2xl font-medium whitespace-nowrap text-primary"
                 >PNL</span
               >
               <form action="#" method="GET" class="hidden md:block md:pl-2">
@@ -1480,12 +1480,12 @@
               <div class="flex justify-between">
                 <div class="flex flex-col gap-3">
                   <p
-                    class="text-md lg:text-xl font-semibold text-gray-500 dark:text-gray-400"
+                    class="text-md lg:text-xl font-medium text-gray-500 dark:text-gray-400"
                   >
                     Users
                   </p>
                   <h5
-                    class="leading-none text-3xl font-bold text-gray-900 dark:text-white pb-2"
+                    class="leading-none text-3xl font-semibold text-gray-900 dark:text-white pb-2"
                   >
                     3,000
                   </h5>
@@ -1519,12 +1519,12 @@
               <div class="flex justify-between">
                 <div class="flex flex-col gap-3">
                   <p
-                    class="text-md lg:text-xl font-semibold text-gray-500 dark:text-gray-400"
+                    class="text-md lg:text-xl font-medium text-gray-500 dark:text-gray-400"
                   >
                     Active Users
                   </p>
                   <h5
-                    class="leading-none text-3xl font-bold text-gray-900 dark:text-white pb-2"
+                    class="leading-none text-3xl font-semibold text-gray-900 dark:text-white pb-2"
                   >
                     30
                   </h5>
@@ -1558,12 +1558,12 @@
               <div class="flex justify-between">
                 <div class="flex flex-col gap-3">
                   <p
-                    class="text-md lg:text-xl font-semibold text-gray-500 dark:text-gray-400"
+                    class="text-md lg:text-xl font-medium text-gray-500 dark:text-gray-400"
                   >
                     Offline Users
                   </p>
                   <h5
-                    class="leading-none text-3xl font-bold text-gray-900 dark:text-white pb-2"
+                    class="leading-none text-3xl font-semibold text-gray-900 dark:text-white pb-2"
                   >
                     25
                   </h5>
