--- a/index.html
+++ b/index.html
@@ -1499,7 +1499,7 @@
                     class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400 p-2"
                   >
                     <tr>
-                      <th scope="col" class="px-6 py-3 text-primary">Names</th>
+                      <th scope="col" class="px-6 py-3 text-primary">Name</th>
                       <th scope="col" class="px-6 py-3 text-primary">
                         Last Login
                       </th>
@@ -1698,7 +1698,7 @@
               <div
                 class="flex items-center flex-col-reverse lg:flex-row flex-wrap items-center lg:justify-between pb-6 gap-3"
               >
-                <form class="max-w-md flex items-center w-full">
+                <form class="lg:max-w-md flex items-center w-full">
                   <label
                     class="block mb-2 text-base font-medium text-primary dark:text-primary flex items-center w-32"
                   >
@@ -3582,7 +3582,7 @@
               <div
                 class="flex items-center flex-col-reverse lg:flex-row flex-wrap items-center lg:justify-between pb-6 gap-3"
               >
-                <form class="max-w-md flex items-center w-full">
+                <form class="lg:max-w-md flex items-center w-full">
                   <label
                     class="block mb-2 text-base font-medium text-primary dark:text-primary flex items-center w-32"
                   >
