--- a/index.html
+++ b/index.html
@@ -1314,6 +1314,156 @@
           </div>
         </aside>
 
+        <!--  Receipt page -->
+        <main class="p-4 md:ml-64 h-auto pt-20">
+          <div
+            class="flex flex-col bg-gray-50 dark:bg-gray-900 rounded-lg min-h-screen"
+          >
+            <h1
+              class="text-2xl lg:text-4xl font-semibold text-primary tracking-tight mb-10"
+            >
+              Receipt
+            </h1>
+
+            <div class="w-full max-w-xl mx-auto">
+              <div class="flex flex-col items-center justify-center my-4">
+               <div class="flex items-center">
+                  <img
+                    src="https://res.cloudinary.com/dyvmtgjer/image/upload/v1717864716/pnl-logo_at49qu.png"
+                    class="mr-3 h-10 lg:h-14"
+                    alt="loading"
+                  />
+                  <p class="font-bold capitalize text-primary ms-3 text-2xl">pixel network limited</p>
+               </div>
+              </div>
+              <form class="w-full flex flex-col items-center" action="#">
+                <div class="grid gap-4 lg:gap-8 mb-4 grid-cols-2 w-full">
+                  <div class="col-span-2 flex items-center justify-between gap-10 lg:gap-20">
+                    <label
+                      for="name"
+                      class="basis-1/4 block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+                      >Full Name:</label
+                    >
+                    <input
+                      type="text"
+                      class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary focus:border-primary block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white"
+                      placeholder=""
+                      required=""
+                      value="John David"
+                    />
+                  </div>
+                  <div class="col-span-2 flex items-center justify-between gap-10 lg:gap-20">
+                    <label
+                      for="email"
+                      class="basis-1/4 block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+                      >Email:</label
+                    >
+                    <div class="relative w-full">
+                      <div class="absolute inset-y-0 start-0 flex items-center ps-3.5 pointer-events-none">
+                        <svg class="w-4 h-4 text-gray-500 dark:text-gray-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 16">
+                            <path d="m10.036 8.278 9.258-7.79A1.979 1.979 0 0 0 18 0H2A1.987 1.987 0 0 0 .641.541l9.395 7.737Z"/>
+                            <path d="M11.241 9.817c-.36.275-.801.425-1.255.427-.428 0-.845-.138-1.187-.395L0 2.6V14a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V2.5l-8.759 7.317Z"/>
+                        </svg>
+                      </div>
+                      <input type="email" id="input-group-1" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary focus:border-primary block w-full ps-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white" placeholder="johndoe21@yahoo.com">
+                    </div>
+                  </div>
+                  <div class="col-span-2 flex items-center justify-between gap-10 lg:gap-20">
+                    <label
+                      for="name"
+                      class="basis-1/4 block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+                      >Phone Number:</label
+                    >
+                    <input
+                      type="number"
+                      class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary focus:border-primary block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white"
+                      placeholder="+234706445705"
+                      required=""
+                    />
+                  </div>
+                  <div class="col-span-2 flex items-center justify-between gap-10 lg:gap-20">
+                    <label
+                      for="name"
+                      class="basis-1/4 block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+                      >Transaction Ref:</label
+                    >
+                    <input
+                      type="text"
+                      class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary focus:border-primary block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white"
+                      placeholder="Customer Service"
+                      required=""
+                      value="TX56574847656"
+                      disabled
+                    />
+                  </div>
+                  <div class="col-span-2 flex items-center justify-between gap-10 lg:gap-20">
+                    <label
+                      for="name"
+                      class="basis-1/4 block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+                      >Transaction Status:</label
+                    >
+                    <input
+                      type="text"
+                      class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary focus:border-primary block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white"
+                      placeholder=""
+                      required=""
+                      value="success"
+                    />
+                  </div>
+                  <div class="col-span-2 flex items-center justify-between gap-10 lg:gap-20">
+                    <label
+                      for="name"
+                      class="basis-1/4 block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+                      >Transaction Amount:</label
+                    >
+                    <input
+                      type="text"
+                      class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary focus:border-primary block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white"
+                      placeholder=""
+                      required=""
+                      value="5,000.00"
+                    />
+                  </div>
+                  <div class="col-span-2 flex items-center justify-between gap-10 lg:gap-20">
+                    <label
+                      for="name"
+                      class="basis-1/4 block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+                      >Transaction Date:</label
+                    >
+                    <input
+                      type="text"
+                      class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary focus:border-primary block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white"
+                      placeholder="confirm password"
+                      required=""
+                      value="20/04/2024"
+                    />
+                  </div>
+                  <div class="col-span-2 flex items-center justify-between gap-10 lg:gap-20">
+                    <label
+                      for="name"
+                      class="basis-1/4 block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+                      >Service Details:</label
+                    >
+                    <input
+                      type="text"
+                      class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary focus:border-primary block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white"
+                      placeholder=""
+                      required=""
+                      value="User Manager"
+                    />
+                  </div>
+                </div>
+                <button
+                  type="submit"
+                  class="text-white inline-flex items-center justify-center bg-primary hover:bg-primary focus:ring-4 focus:outline-none focus:ring-primary font-medium rounded-lg text-sm px-5 py-2.5 text-center my-10 w-full"
+                >
+                  Generate Receipt
+                </button>
+              </form>
+            </div>
+          </div>
+        </main>
+
         <!--  Add User page -->
         <main class="p-4 md:ml-64 h-auto pt-20">
           <div
@@ -1325,13 +1475,24 @@
               Add User
             </h1>
 
-            <div class="min-w-screen-lgg w-80 mx-auto border-2">
+            <div class="w-full max-w-2xl mx-auto">
+              <div class="flex flex-col items-center justify-center my-10">
+               <div class="flex items-center">
+                  <img
+                    src="https://res.cloudinary.com/dyvmtgjer/image/upload/v1717864716/pnl-logo_at49qu.png"
+                    class="mr-3 h-10 lg:h-14"
+                    alt="loading"
+                  />
+                  <p class="font-bold capitalize text-primary ms-3 text-2xl">pixel network limited</p>
+               </div>
+                <p class="font-semibold mt-4 text-base text-gray-900 dark:text-white">Enter the basic details and password for new users</p>
+              </div>
               <form class="w-full flex flex-col items-center" action="#">
-                <div class="grid gap-4 lg:gap-8 mb-4 grid-cols-2 w-full border">
+                <div class="grid gap-4 lg:gap-8 mb-4 grid-cols-2">
                   <div class="sm:col-span-1 col-span-2">
                     <label
                       for="name"
-                      class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+                      class="basis-1/4 block mb-2 text-sm font-medium text-gray-900 dark:text-white"
                       >First Name</label
                     >
                     <input
@@ -1344,7 +1505,7 @@
                   <div class="sm:col-span-1 col-span-2">
                     <label
                       for="name"
-                      class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+                      class="basis-1/4 block mb-2 text-sm font-medium text-gray-900 dark:text-white"
                       >Surname</label
                     >
                     <input
@@ -1357,7 +1518,7 @@
                   <div class="sm:col-span-1 col-span-2">
                     <label
                       for="name"
-                      class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+                      class="basis-1/4 block mb-2 text-sm font-medium text-gray-900 dark:text-white"
                       >Username</label
                     >
                     <input
@@ -1370,7 +1531,7 @@
                   <div class="sm:col-span-1 col-span-2">
                     <label
                       for="name"
-                      class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+                      class="basis-1/4 block mb-2 text-sm font-medium text-gray-900 dark:text-white"
                       >Role</label
                     >
                     <input
@@ -1383,7 +1544,7 @@
                   <div class="sm:col-span-1 col-span-2">
                     <label
                       for="name"
-                      class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+                      class="basis-1/4 block mb-2 text-sm font-medium text-gray-900 dark:text-white"
                       >Password</label
                     >
                     <input
@@ -1396,7 +1557,7 @@
                   <div class="sm:col-span-1 col-span-2">
                     <label
                       for="name"
-                      class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+                      class="basis-1/4 block mb-2 text-sm font-medium text-gray-900 dark:text-white"
                       >Confirm Password</label
                     >
                     <input
@@ -1406,10 +1567,10 @@
                       required=""
                     />
                   </div>
-                  <div class="sm:col-span-1 col-span-2">
+                  <div class="col-span-2">
                     <label
                       for="name"
-                      class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+                      class="basis-1/4 block mb-2 text-sm font-medium text-gray-900 dark:text-white"
                       >Feature Access:</label
                     >
                     <div class="flex items-center flex-wrap gap-4">
@@ -1437,12 +1598,60 @@
                           >Recharge Log</label
                         >
                       </div>
+                      <div class="flex items-center">
+                        <input
+                          type="checkbox"
+                          value=""
+                          class="w-4 h-4 border-primary rounded bg-gray-50 checked:bg-primary"
+                        />
+                        <label
+                          for="default-checkbox"
+                          class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300"
+                          >Withdrawl Log</label
+                        >
+                      </div>
+                      <div class="flex items-center">
+                        <input
+                          type="checkbox"
+                          value=""
+                          class="w-4 h-4 border-primary rounded bg-gray-50 checked:bg-primary"
+                        />
+                        <label
+                          for="default-checkbox"
+                          class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300"
+                          >Game Log</label
+                        >
+                      </div>
+                      <div class="flex items-center">
+                        <input
+                          type="checkbox"
+                          value=""
+                          class="w-4 h-4 border-primary rounded bg-gray-50 checked:bg-primary"
+                        />
+                        <label
+                          for="default-checkbox"
+                          class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300"
+                          >Phone OTP</label
+                        >
+                      </div>
+                      <div class="flex items-center">
+                        <input
+                          type="checkbox"
+                          value=""
+                          class="w-4 h-4 border-primary rounded bg-gray-50 checked:bg-primary"
+                        />
+                        <label
+                          for="default-checkbox"
+                          class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300"
+                          >Ludo Game</label
+                        >
+                      </div>
                     </div>
                   </div>
                 </div>
                 <button
                   type="submit"
-                  class="text-white inline-flex items-center bg-primary hover:bg-primary focus:ring-4 focus:outline-none focus:ring-primary font-medium rounded-lg text-sm px-5 py-2.5 text-center"
+                  class="text-white inline-flex items-center bg-primary hover:bg-primary focus:ring-4 focus:outline-none focus:ring-primary font-medium rounded-lg text-sm px-5 py-2.5 text-center my-10"
                 >
                   <svg
                     class="mr-1 -ml-1 w-6 h-6"
@@ -1456,7 +1665,7 @@
                       clip-rule="evenodd"
                     ></path>
                   </svg>
-                  Add new product
+                  Create User Account
                 </button>
               </form>
             </div>
@@ -1725,7 +1934,7 @@
                   </select>
                 </form>
                 <div
-                  class="bbg-transparent border-2 border-gray-300 dark:border-gray-500 text-gray-900 dark:text-white text-sm rounded-lg block w-fit p-2.5 self-end"
+                  class="bbg-transparent border border-gray-300 dark:border-gray-500 text-gray-900 dark:text-white text-sm rounded-lg block w-fit p-2.5 self-end"
                 >
                   2023-04-018 - 2024-04-18
                 </div>
@@ -2062,7 +2271,7 @@
                         <div class="col-span-2">
                           <label
                             for="user-id"
-                            class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+                            class="basis-1/4 block mb-2 text-sm font-medium text-gray-900 dark:text-white"
                             >Enter User ID</label
                           >
                           <input
@@ -2077,7 +2286,7 @@
                         <div class="col-span-2">
                           <label
                             for="last-name"
-                            class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+                            class="basis-1/4 block mb-2 text-sm font-medium text-gray-900 dark:text-white"
                             >Amount</label
                           >
                           <input
@@ -2588,7 +2797,7 @@
                         <div class="col-span-2">
                           <label
                             for="user-id"
-                            class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+                            class="basis-1/4 block mb-2 text-sm font-medium text-gray-900 dark:text-white"
                             >Enter User ID</label
                           >
                           <input
@@ -2603,7 +2812,7 @@
                         <div class="col-span-2">
                           <label
                             for="last-name"
-                            class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+                            class="basis-1/4 block mb-2 text-sm font-medium text-gray-900 dark:text-white"
                             >Amount</label
                           >
                           <input
@@ -3609,7 +3818,7 @@
                   </select>
                 </form>
                 <div
-                  class="bbg-transparent border-2 border-gray-300 dark:border-gray-500 text-gray-900 dark:text-white text-sm rounded-lg block w-fit p-2.5 self-end"
+                  class="bbg-transparent border border-gray-300 dark:border-gray-500 text-gray-900 dark:text-white text-sm rounded-lg block w-fit p-2.5 self-end"
                 >
                   2023-04-018 - 2024-04-18
                 </div>
