--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     type="text"
                     name="email"
                     id="topbar-search"
-                    class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-500 truncate focus:border-primary-500 block w-full pl-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
+                    class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary truncate focus:border-primary block w-full pl-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary dark:focus:border-primary"
                     placeholder="Search"
                   />
                 </div>
@@ -852,7 +852,7 @@
                   type="text"
                   name="search"
                   id="sidebar-search"
-                  class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-500 truncate focus:border-primary-500 block w-full pl-10 p-2 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
+                  class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary truncate focus:border-primary block w-full pl-10 p-2 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary dark:focus:border-primary"
                   placeholder="Search"
                 />
               </div>
@@ -1325,7 +1325,7 @@
               Receipt
             </h1>
 
-            <div class="w-full max-w-xl mx-auto">
+            <div class="w-full max-w-xl mx-auto shadow">
               <div class="flex flex-col items-center justify-center my-4">
                <div class="flex items-center">
                   <img
@@ -1333,7 +1333,7 @@
                     class="mr-3 h-10 lg:h-14"
                     alt="loading"
                   />
-                  <p class="font-bold capitalize text-primary ms-3 text-2xl">pixel network limited</p>
+                  <p class="font-semibold capitalize text-primary ms-1 lg:ms-3 text-xl lg:text-2xl">pixel network limited</p>
                </div>
               </div>
               <form class="w-full flex flex-col items-center" action="#">
@@ -1483,9 +1483,9 @@
                     class="mr-3 h-10 lg:h-14"
                     alt="loading"
                   />
-                  <p class="font-bold capitalize text-primary ms-3 text-2xl">pixel network limited</p>
+                  <p class="font-semibold capitalize text-primary ms-1 lg:ms-3 text-xl lg:text-2xl">pixel network limited</p>
                </div>
-                <p class="font-semibold mt-4 text-base text-gray-900 dark:text-white">Enter the basic details and password for new users</p>
+                <p class="font-semibold mt-1 text-sm lg:text-base text-gray-900 dark:text-white">Enter the basic details and password for new users</p>
               </div>
               <form class="w-full flex flex-col items-center" action="#">
                 <div class="grid gap-4 lg:gap-8 mb-4 grid-cols-2">
