--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.css"
       rel="stylesheet"
     />
-    <link rel="shortcut icon" href="https://res.cloudinary.com/dyvmtgjer/image/upload/v1717864716/pnl-logo_at49qu.png" type="image/x-icon">
+    <link
+      rel="shortcut icon"
+      href="https://res.cloudinary.com/dyvmtgjer/image/upload/v1717864716/pnl-logo_at49qu.png"
+      type="image/x-icon"
+    />
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/3.3.2/tailwind.min.css"
       rel="stylesheet"
@@ -1319,8 +1323,158 @@
           </div>
         </aside>
 
-         <!-- Fish Game Page -->
-         <main class="p-4 md:ml-64 h-auto pt-20">
+        <!-- Spin Game Page -->
+        <main class="p-4 md:ml-64 h-auto pt-20">
+          <div
+            class="flex flex-col bg-gray-50 dark:bg-gray-900 rounded-lg min-h-screen"
+          >
+            <h1
+              class="text-xl lg:text-3xl font-medium text-primary tracking-tight mb-10"
+            >
+              Spin Game
+            </h1>
+            <div class="p-2 bg-white dark:bg-gray-800 rounded-lg mb-4">
+              <div
+                class="border border-gray-300 dark:border-gray-500 text-gray-900 dark:text-white text-sm rounded-lg block w-fit p-2.5 self-end"
+              >
+                2023-04-018 - 2024-04-18
+              </div>
+            </div>
+            <div class="flex flex-col">
+              <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
+                <div
+                  class="w-full bg-white rounded-lg shadow dark:bg-gray-800 p-4 md:p-6 flex items-center gap-2 lg:gap-6 max-h-60"
+                >
+                  <div class="basis-1/3 flex justify-between">
+                    <div class="flex flex-col gap-3">
+                      <p
+                        class="text-sm font-medium text-gray-900 dark:text-white"
+                      >
+                        Active Users
+                      </p>
+                      <h5
+                        class="leading-none text-3xl font-semibold text-gray-900 dark:text-white pb-2"
+                      >
+                        30
+                      </h5>
+                      <div
+                        class="flex items-center text-base font-semibold text-green-500 dark:text-green-500 text-center"
+                      >
+                        10%
+                        <svg
+                          class="w-3 h-3 ms-1"
+                          aria-hidden="true"
+                          xmlns="http://www.w3.org/2000/svg"
+                          fill="none"
+                          viewBox="0 0 10 14"
+                        >
+                          <path
+                            stroke="currentColor"
+                            stroke-linecap="round"
+                            stroke-linejoin="round"
+                            stroke-width="2"
+                            d="M5 13V1m0 0L1 5m4-4 4 4"
+                          />
+                        </svg>
+                      </div>
+                    </div>
+                  </div>
+                  <div
+                    class="basis-1/7 w-full"
+                    id="area-chart-activeUsersSpin"
+                  ></div>
+                </div>
+
+                <div
+                  class="w-full bg-white rounded-lg shadow dark:bg-gray-800 p-4 md:p-6 max-h-60"
+                >
+                  <h3
+                    class="leading-none text-base font-semibold text-gray-900 dark:text-white pb-2"
+                  >
+                    Total Betting Amount
+                  </h3>
+                  <div id="line-chart-spin"></div>
+                </div>
+
+                <div
+                  class="w-full bg-white rounded-lg shadow dark:bg-gray-800 p-4 md:p-6 max-h-60"
+                >
+                  <h3
+                    class="leading-none text-base font-semibold text-gray-900 dark:text-white pb-2"
+                  >
+                    Total Winning
+                  </h3>
+                  <!-- Donut Chart -->
+                  <div class="py-6" id="donut-chartSpin"></div>
+                </div>
+              </div>
+              <div class="relative overflow-x-auto shadow rounded-lg mt-4">
+                <table
+                  class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400"
+                >
+                  <thead
+                    class="text-xs text-gray-700 uppercase bg-white dark:bg-gray-700 dark:text-gray-400 p-2"
+                  >
+                    <tr>
+                      <th scope="col" class="px-6 py-3 text-primary">
+                        User ID
+                      </th>
+                      <th scope="col" class="px-6 py-3 text-primary">
+                        Game ID
+                      </th>
+                      <th scope="col" class="px-6 py-3 text-primary">
+                        Bet Amount
+                      </th>
+                      <th scope="col" class="px-6 py-3 text-primary">
+                        Winnings
+                      </th>
+                      <th scope="col" class="px-6 py-3 text-primary">
+                        Date and Time
+                      </th>
+                      <th scope="col" class="px-6 py-3 text-primary">Remark</th>
+                    </tr>
+                  </thead>
+                  <tbody id="tbodySpin"></tbody>
+                </table>
+              </div>
+              <div
+                class="flex items-center flex-wrap justify-between mt-6 lg:mt-10"
+              >
+                <!-- Previous Button -->
+                <div class="flex">
+                  <a
+                    href="#"
+                    class="flex items-center justify-center px-3 h-8 text-sm font-medium text-gray-500 bg-white border border-gray-300 rounded-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"
+                  >
+                    Previous
+                  </a>
+
+                  <!-- Next Button -->
+                  <a
+                    href="#"
+                    class="flex items-center justify-center px-3 h-8 ms-3 text-sm font-medium text-gray-500 bg-white border border-gray-300 rounded-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"
+                  >
+                    Next
+                  </a>
+                </div>
+
+                <span class="text-sm text-gray-700 dark:text-gray-400">
+                  Page
+                  <span class="font-semibold text-gray-900 dark:text-white"
+                    >1</span
+                  >
+                  of
+                  <span class="font-semibold text-gray-900 dark:text-white"
+                    >10</span
+                  >
+                </span>
+              </div>
+            </div>
+          </div>
+        </main>
+
+        <!-- Fish Game Page -->
+        <main class="p-4 md:ml-64 h-auto pt-20">
           <div
             class="flex flex-col bg-gray-50 dark:bg-gray-900 rounded-lg min-h-screen"
           >
@@ -1395,12 +1549,11 @@
                 <div
                   class="w-full bg-white rounded-lg shadow dark:bg-gray-800 p-4 md:p-6 max-h-60"
                 >
-                <h3
-                class="leading-none text-base font-semibold text-gray-900 dark:text-white pb-2"
-              >
-              Total Winning
-
-              </h3>
+                  <h3
+                    class="leading-none text-base font-semibold text-gray-900 dark:text-white pb-2"
+                  >
+                    Total Winning
+                  </h3>
                   <!-- Donut Chart -->
                   <div class="py-6" id="donut-chartSoccer"></div>
                 </div>
@@ -1419,20 +1572,19 @@
                       <th scope="col" class="px-6 py-3 text-primary">
                         Game ID
                       </th>
-                      <th scope="col" class="px-6 py-3 text-primary">Winner</th>
                       <th scope="col" class="px-6 py-3 text-primary">
                         Bet Amount
                       </th>
                       <th scope="col" class="px-6 py-3 text-primary">
-                        Win Amount
+                        Winnings
                       </th>
                       <th scope="col" class="px-6 py-3 text-primary">
                         Date and Time
                       </th>
-                      <th scope="col" class="px-6 py-3 text-primary">Status</th>
+                      <th scope="col" class="px-6 py-3 text-primary">Remark</th>
                     </tr>
                   </thead>
-                  <tbody id="tbodySoccer"></tbody>
+                  <tbody id="tbodyFish"></tbody>
                 </table>
               </div>
               <div
@@ -1547,12 +1699,11 @@
                 <div
                   class="w-full bg-white rounded-lg shadow dark:bg-gray-800 p-4 md:p-6 max-h-60"
                 >
-                <h3
-                class="leading-none text-base font-semibold text-gray-900 dark:text-white pb-2"
-              >
-              Total Winning
-
-              </h3>
+                  <h3
+                    class="leading-none text-base font-semibold text-gray-900 dark:text-white pb-2"
+                  >
+                    Total Winning
+                  </h3>
                   <!-- Donut Chart -->
                   <div class="py-6" id="donut-chartSoccer"></div>
                 </div>
@@ -1699,12 +1850,11 @@
                 <div
                   class="w-full bg-white rounded-lg shadow dark:bg-gray-800 p-4 md:p-6 max-h-60"
                 >
-                <h3
-                class="leading-none text-base font-semibold text-gray-900 dark:text-white pb-2"
-              >
-              Total Winning
-
-              </h3>
+                  <h3
+                    class="leading-none text-base font-semibold text-gray-900 dark:text-white pb-2"
+                  >
+                    Total Winning
+                  </h3>
                   <!-- Donut Chart -->
                   <div class="py-6" id="donut-chartLudo"></div>
                 </div>
@@ -2246,7 +2396,7 @@
           </div>
 
           <div
-            class="w-full bg-white rounded-lg shadow dark:bg-gray-800 mt-4 lg:mt-0"
+            class="w-full bg-white rounded-lg shadow dark:bg-gray-800 mt-4"
           >
             <div class="flex justify-between p-4 md:p-6 pb-0 md:pb-0">
               <div>
