--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <script defer src="src/dark-mode.js"></script>
     <script>
       tailwind.config = {
+        darkMode: 'class', // Enable dark mode using the class strategy
         theme: {
           extend: {
             colors: {
