--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
               <button
                 id="theme-toggle"
                 type="button"
-                class="text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-2.5"
+                class="text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none rounded-lg text-sm p-2.5"
               >
                 <svg
                   id="theme-toggle-dark-icon"
@@ -158,7 +158,7 @@
                 type="button"
                 data-drawer-toggle="drawer-navigation"
                 aria-controls="drawer-navigation"
-                class="p-2 mr-1 text-gray-500 rounded-lg md:hidden hover:text-gray-900 hover:bg-gray-100 dark:text-gray-400 dark:hover:text-white dark:hover:bg-gray-700 focus:ring-4 focus:ring-gray-300 dark:focus:ring-gray-600"
+                class="p-2 mr-1 text-gray-500 rounded-lg md:hidden hover:text-gray-900 hover:bg-gray-100 dark:text-gray-400 dark:hover:text-white dark:hover:bg-gray-700"
               >
                 <span class="sr-only">Toggle search</span>
                 <svg
@@ -181,7 +181,7 @@
               <button
                 type="button"
                 data-dropdown-toggle="apps-dropdown"
-                class="p-2 text-gray-500 rounded-lg hover:text-gray-900 hover:bg-gray-100 dark:text-gray-400 dark:hover:text-white dark:hover:bg-gray-700 focus:ring-4 focus:ring-gray-300 dark:focus:ring-gray-600"
+                class="p-2 text-gray-500 rounded-lg hover:text-gray-900 hover:bg-gray-100 dark:text-gray-400 dark:hover:text-white dark:hover:bg-gray-700 focus:ring-2 focus:ring-gray-300 dark:focus:ring-gray-600"
               >
                 <span class="sr-only">View notifications</span>
                 <!-- Icon -->
@@ -406,7 +406,7 @@
               <button
                 type="button"
                 data-dropdown-toggle="notification-dropdown"
-                class="p-2 mr-1 text-gray-500 rounded-lg hover:text-gray-900 hover:bg-gray-100 dark:text-gray-400 dark:hover:text-white dark:hover:bg-gray-700 focus:ring-4 focus:ring-gray-300 dark:focus:ring-gray-600"
+                class="p-2 mr-1 text-gray-500 rounded-lg hover:text-gray-900 hover:bg-gray-100 dark:text-gray-400 dark:hover:text-white dark:hover:bg-gray-700 focus:ring-2 focus:ring-gray-300 dark:focus:ring-gray-600"
               >
                 <span class="sr-only">View notifications</span>
                 <!-- Bell icon -->
@@ -695,7 +695,7 @@
               </div>
               <button
                 type="button"
-                class="flex mx-3 text-sm bg-gray-800 rounded-full md:mr-0 focus:ring-4 focus:ring-gray-300 dark:focus:ring-gray-600"
+                class="flex mx-3 text-sm bg-gray-800 rounded-full md:mr-0 focus:ring-2 focus:ring-gray-300 dark:focus:ring-gray-600"
                 id="user-menu-button"
                 aria-expanded="false"
                 data-dropdown-toggle="dropdown"
@@ -1456,7 +1456,7 @@
                 >
                 <button
                   type="button"
-                  class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700"
+                  class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-2 focus:ring-gray-100 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700"
                 >
                   Check
                 </button>
@@ -1466,7 +1466,7 @@
                 type="button"
                 data-modal-target="addAgentModal"
                 data-modal-show="addAgentModal"
-                class="text-white bg-primary hover:bg-primary focus:ring-4 focus:outline-none focus:ring-primary font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center me-2 w-fit"
+                class="text-white bg-primary hover:bg-primary focus:ring-2 focus:outline-none focus:ring-primary font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center me-2 w-fit"
               >
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -1591,7 +1591,7 @@
                         </div>
                         <button
                           type="submit"
-                          class="text-white inline-flex items-center justify-center bg-primary hover:bg-primary focus:ring-4 focus:outline-none focus:ring-primary font-medium rounded-lg text-sm px-5 py-2.5 text-center my-10 w-full"
+                          class="text-white inline-flex items-center justify-center bg-primary hover:bg-primary focus:ring-2 focus:outline-none focus:ring-primary font-medium rounded-lg text-sm px-5 py-2.5 text-center my-10 w-full"
                         >
                           Create User Acccount
                         </button>
@@ -1825,7 +1825,7 @@
                       <button
                         data-modal-hide="deductAmount-modal"
                         type="button"
-                        class="text-white bg-primary focus:ring-4 focus:outline-none focus:ring-primary font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary dark:focus:ring-primary w-full"
+                        class="text-white bg-primary focus:ring-2 focus:outline-none focus:ring-primary font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary dark:focus:ring-primary w-full"
                       >
                         Okay
                       </button>
@@ -1910,7 +1910,7 @@
                       <button
                         data-modal-hide="banUser-modal"
                         type="button"
-                        class="ms-3 text-white bg-primary focus:ring-4 focus:outline-none focus:ring-primary font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary dark:focus:ring-primary w-fit"
+                        class="ms-3 text-white bg-primary focus:ring-2 focus:outline-none focus:ring-primary font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary dark:focus:ring-primary w-fit"
                       >
                         Okay
                       </button>
@@ -2968,7 +2968,7 @@
               >
                 <button
                   type="button"
-                  class="text-white bg-primary hover:bg-primary focus:ring-4 focus:outline-none focus:ring-primary font-medium rounded-full text-sm p-2.5 text-center inline-flex items-center me-2 dark:bg-primary dark:hover:bg-primary dark:focus:ring-primary"
+                  class="text-white bg-primary hover:bg-primary focus:ring-2 focus:outline-none focus:ring-primary font-medium rounded-full text-sm p-2.5 text-center inline-flex items-center me-2 dark:bg-primary dark:hover:bg-primary dark:focus:ring-primary"
                 >
                   <svg
                     class="w-4 h-4 font-bold"
@@ -3000,7 +3000,7 @@
                 </span>
                 <button
                   type="button"
-                  class="text-white bg-primary hover:bg-primary focus:ring-4 focus:outline-none focus:ring-primary font-medium rounded-full text-sm p-2.5 text-center inline-flex items-center me-2 dark:bg-primary dark:hover:bg-primary dark:focus:ring-primary"
+                  class="text-white bg-primary hover:bg-primary focus:ring-2 focus:outline-none focus:ring-primary font-medium rounded-full text-sm p-2.5 text-center inline-flex items-center me-2 dark:bg-primary dark:hover:bg-primary dark:focus:ring-primary"
                 >
                   <svg
                     class="w-4 h-4 font-bold"
@@ -3726,7 +3726,7 @@
                 </div>
                 <button
                   type="submit"
-                  class="text-white inline-flex items-center justify-center bg-primary hover:bg-primary focus:ring-4 focus:outline-none focus:ring-primary font-medium rounded-lg text-sm px-5 py-2.5 text-center my-10 w-full"
+                  class="text-white inline-flex items-center justify-center bg-primary hover:bg-primary focus:ring-2 focus:outline-none focus:ring-primary font-medium rounded-lg text-sm px-5 py-2.5 text-center my-10 w-full"
                 >
                   Generate Receipt
                 </button>
@@ -3932,7 +3932,7 @@
                 </div>
                 <button
                   type="submit"
-                  class="text-white inline-flex items-center bg-primary hover:bg-primary focus:ring-4 focus:outline-none focus:ring-primary font-medium rounded-lg text-sm px-5 py-2.5 text-center my-10"
+                  class="text-white inline-flex items-center bg-primary hover:bg-primary focus:ring-2 focus:outline-none focus:ring-primary font-medium rounded-lg text-sm px-5 py-2.5 text-center my-10"
                 >
                   <svg
                     class="mr-1 -ml-1 w-6 h-6"
@@ -3969,7 +3969,7 @@
                 type="button"
                 data-modal-target="addUser"
                 data-modal-show="addUser"
-                class="text-white bg-primary hover:bg-primary focus:ring-4 focus:outline-none focus:ring-primary font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center me-2 w-fit mb-10"
+                class="text-white bg-primary hover:bg-primary focus:ring-2 focus:outline-none focus:ring-primary font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center me-2 w-fit mb-10"
               >
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -4124,7 +4124,7 @@
                      </div>
                      <button
                        type="submit"
-                       class="text-white inline-flex items-center justify-center bg-primary hover:bg-primary focus:ring-4 focus:outline-none focus:ring-primary font-medium rounded-lg text-sm px-5 py-2.5 text-center my-10 w-full"
+                       class="text-white inline-flex items-center justify-center bg-primary hover:bg-primary focus:ring-2 focus:outline-none focus:ring-primary font-medium rounded-lg text-sm px-5 py-2.5 text-center my-10 w-full"
                      >
                        Create User Acccount
                      </button>
@@ -4185,13 +4185,13 @@
                 <div class="">
                   <button
                     type="submit"
-                    class="text-white bg-primary hover:bg-primary focus:ring-4 focus:ring-primary font-medium rounded-lg text-sm px-5 py-3 me-2 focus:outline-none"
+                    class="text-white bg-primary hover:bg-primary focus:ring-2 focus:ring-primary font-medium rounded-lg text-sm px-5 py-3 me-2 focus:outline-none"
                   >
                     Search
                   </button>
                   <button
                     type="submit"
-                    class="text-white bg-primary hover:bg-primary focus:ring-4 focus:ring-primary font-medium rounded-lg text-sm px-5 py-3 me-2 focus:outline-none"
+                    class="text-white bg-primary hover:bg-primary focus:ring-2 focus:ring-primary font-medium rounded-lg text-sm px-5 py-3 me-2 focus:outline-none"
                   >
                     Send SMS
                   </button>
@@ -4671,7 +4671,7 @@
                     >
                       <button
                         type="submit"
-                        class="text-white bg-primary focus:ring-4 focus:outline-none focus:ring-primary font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary dark:focus:ring-primary w-full"
+                        class="text-white bg-primary focus:ring-2 focus:outline-none focus:ring-primary font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary dark:focus:ring-primary w-full"
                       >
                         Add Cash
                       </button>
@@ -4807,7 +4807,7 @@
                       <button
                         data-modal-hide="deleteAmount-modal"
                         type="button"
-                        class="text-white bg-primary focus:ring-4 focus:outline-none focus:ring-primary font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary dark:focus:ring-primary w-full"
+                        class="text-white bg-primary focus:ring-2 focus:outline-none focus:ring-primary font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary dark:focus:ring-primary w-full"
                       >
                         Okay
                       </button>
@@ -4892,7 +4892,7 @@
                       <button
                         data-modal-hide="banUser-modal"
                         type="button"
-                        class="ms-3 text-white bg-primary focus:ring-4 focus:outline-none focus:ring-primary font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary dark:focus:ring-primary w-fit"
+                        class="ms-3 text-white bg-primary focus:ring-2 focus:outline-none focus:ring-primary font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary dark:focus:ring-primary w-fit"
                       >
                         Okay
                       </button>
@@ -5197,7 +5197,7 @@
                     >
                       <button
                         type="submit"
-                        class="text-white bg-primary focus:ring-4 focus:outline-none focus:ring-primary font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary dark:focus:ring-primary w-full"
+                        class="text-white bg-primary focus:ring-2 focus:outline-none focus:ring-primary font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary dark:focus:ring-primary w-full"
                       >
                         Add Cash
                       </button>
@@ -5333,7 +5333,7 @@
                       <button
                         data-modal-hide="deleteAmount-modal"
                         type="button"
-                        class="text-white bg-primary focus:ring-4 focus:outline-none focus:ring-primary font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary dark:focus:ring-primary w-full"
+                        class="text-white bg-primary focus:ring-2 focus:outline-none focus:ring-primary font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary dark:focus:ring-primary w-full"
                       >
                         Okay
                       </button>
@@ -5418,7 +5418,7 @@
                       <button
                         data-modal-hide="banUser-modal"
                         type="button"
-                        class="ms-3 text-white bg-primary focus:ring-4 focus:outline-none focus:ring-primary font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary dark:focus:ring-primary w-fit"
+                        class="ms-3 text-white bg-primary focus:ring-2 focus:outline-none focus:ring-primary font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary dark:focus:ring-primary w-fit"
                       >
                         Okay
                       </button>
