--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
               primary: "#147860",
               secondary: "#7F56D9",
               tetiary: "#B7B6FF",
-              dark100: "#1a1625",
-              dark200: "#2f2b3a",
-              dark300: "#46424f",
-              dark400: "#5e5a66",
-              dark500: "#76737e",
+              dark100: "#121212",
+              dark200: "#25282c",
+              dark300: "#16171a",
+              dark400: "#1e2023",
+              dark500: "#595959",
             },
           },
         },
