--- a/index.html
+++ b/index.html
@@ -1494,10 +1494,10 @@
                   <tr>
                     <th scope="col" class="px-6 py-3">Promo code</th>
                     <th scope="col" class="px-6 py-3">List of users</th>
-                    <th scope="col" class="px-6 py-3">Total No of users</th>
-                    <th scope="col" class="px-6 py-3">Total review gotten</th>
+                    <th scope="col" class="px-6 py-3">No of users</th>
+                    <th scope="col" class="px-6 py-3">Review gotten</th>
                     <th scope="col" class="px-6 py-3">
-                      Total review Generated
+                      Review Generated
                     </th>
                     <th scope="col" class="px-6 py-3">Remove Agent</th>
                   </tr>
