--- a/index.html
+++ b/index.html
@@ -1613,7 +1613,7 @@
                   </select>
                 </form>
 
-                <a href="" class="hover:bg-gray-100 rounded-lg p-2">
+                <a href="" class="hover:bg-gray-100 dark:hover:bg-gray-500 rounded-lg p-2">
                   <label
                     for="countries"
                     class="block mb-2 text-sm font-medium text-gray-500 dark:text-gray-100"
@@ -1644,7 +1644,7 @@
                   </div>
                 </a>
 
-                <a href="" class="hover:bg-gray-100 rounded-lg p-2">
+                <a href="" class="hover:bg-gray-100 dark:hover:bg-gray-500 rounded-lg p-2">
                   <label
                     for="countries"
                     class="block mb-2 text-sm font-medium text-gray-500 dark:text-gray-100"
